# unil-sport-notifier

./: launch.py  pyproject.toml  test.py
src/usn/api/: api.py  credentials.py  notifier.py  status.py
src/usn/discord/: client.py  credentials.py
