[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unil-sport-notifier"
version = "0.1.0"
description = "A notifier for UNIL sports activities."
authors = [
    { name = "MichelDucartier", email = "m.zhang2490@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "discord.py",
    "pandas",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
